farlodir=/usr/local/bin
farlo_PROGRAMS=farlo
farlo_SOURCES=main.c crack.c htable.c algorithms/xavi.c algorithms/zyxel.c algorithms/comtrendwpa.c algorithms/dlink.c algorithms/smc.c algorithms/huawei.c algorithms/thomson.c algorithms/wlanlike.c patterns.c cbuffer.c wireless.c ciphers.c algorithms.c
farlo_CPPFLAGS=`xml2-config --cflags`

