farlo_ngdir=/usr/local/bin
farlo_ng_PROGRAMS=farlo-ng
farlo_ng_SOURCES=main.c crack.c htable.c algorithms/xavi.c algorithms/zyxel.c algorithms/comtrendwpa.c algorithms/dlink.c algorithms/smc.c algorithms/huawei.c algorithms/thomson.c algorithms/wlanlike.c patterns.c cbuffer.c wireless.c ciphers.c algorithms.c
farlo_ng_CPPFLAGS=`xml2-config --cflags`

